@@ -26,7 +26,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 
@@ -44,7 +43,7 @@ public class RunCommandTest extends BaseCommandTest {
     private Path testResources;
     private Path testDistCacheDirectory;
     private ProjectEnvironmentBuilder projectEnvironmentBuilder;
-    static Path logFile = Paths.get("./src/test/resources/compiler_plugin_tests/" +
+    static Path logFile = Path.of("./src/test/resources/compiler_plugin_tests/" +
             "log_creator_combined_plugin/compiler-plugin.txt");
 
     @BeforeSuite
@@ -58,14 +57,14 @@ public class RunCommandTest extends BaseCommandTest {
         super.setup();
         try {
             this.testResources = super.tmpDir.resolve("build-test-resources");
-            Path testBuildDirectory = Paths.get("build").toAbsolutePath();
+            Path testBuildDirectory = Path.of("build").toAbsolutePath();
             this.testDistCacheDirectory = testBuildDirectory.resolve(DIST_CACHE_DIRECTORY);
-            Path customUserHome = Paths.get("build", "user-home");
+            Path customUserHome = Path.of("build", "user-home");
             Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
             this.projectEnvironmentBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
             URI testResourcesURI = Objects.requireNonNull(
                     getClass().getClassLoader().getResource("test-resources")).toURI();
-            Files.walkFileTree(Paths.get(testResourcesURI), new BuildCommandTest.Copy(Paths.get(testResourcesURI),
+            Files.walkFileTree(Path.of(testResourcesURI), new BuildCommandTest.Copy(Path.of(testResourcesURI),
                     this.testResources));
         } catch (URISyntaxException e) {
             Assert.fail("error loading resources");
@@ -298,11 +297,11 @@ public class RunCommandTest extends BaseCommandTest {
 
     @Test(description = "Run a ballerina project with the engagement of all type of compiler plugins")
     public void testRunBalProjectWithAllCompilerPlugins() throws IOException {
-        Path logFile = Paths.get("./src/test/resources/compiler_plugin_tests/" +
+        Path logFile = Path.of("./src/test/resources/compiler_plugin_tests/" +
                 "log_creator_combined_plugin/compiler-plugin.txt");
         Files.createDirectories(logFile.getParent());
         Files.writeString(logFile, "");
-        Path compilerPluginPath = Paths.get("./src/test/resources/test-resources").resolve("compiler-plugins");
+        Path compilerPluginPath = Path.of("./src/test/resources/test-resources").resolve("compiler-plugins");
         BCompileUtil.compileAndCacheBala(compilerPluginPath.resolve("log_creator_pkg_provided_code_analyzer_im"),
                 testDistCacheDirectory, projectEnvironmentBuilder);
         BCompileUtil.compileAndCacheBala(compilerPluginPath.resolve("log_creator_pkg_provided_code_generator_im"),
