@@ -9,7 +9,6 @@ import org.testng.annotations.Test;
 import org.wso2.ballerinalang.util.RepoUtils;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static io.ballerina.projects.util.ProjectUtils.getAccessTokenOfCLI;
 
@@ -18,7 +17,7 @@ import static io.ballerina.projects.util.ProjectUtils.getAccessTokenOfCLI;
  */
 public class TestCentralUtils {
 
-    private static final Path UTILS_TEST_RESOURCES = Paths.get("src/test/resources/test-resources/central-utils");
+    private static final Path UTILS_TEST_RESOURCES = Path.of("src/test/resources/test-resources/central-utils");
 
     @Test(description = "Test get access token from Settings.toml")
     public void testGetAccessTokenOfCliFromSettings() throws SettingsTomlException {
