@@ -39,13 +39,11 @@ import org.ballerinalang.maven.bala.client.MavenResolverClientException;
 import org.ballerinalang.toml.exceptions.SettingsTomlException;
 import org.wso2.ballerinalang.util.RepoUtils;
 
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -190,7 +188,7 @@ public class MavenPackageRepository extends AbstractPackageRepository {
             try (BufferedReader bufferedReader = Files.newBufferedReader(packageJsonPath, StandardCharsets.UTF_8)) {
                 JsonObject resultObj = new Gson().fromJson(bufferedReader, JsonObject.class);
                 String platform = resultObj.get(PLATFORM).getAsString();
-                Path actualBalaPath = Paths.get(this.repoLocation).resolve(org).resolve(name)
+                Path actualBalaPath = Path.of(this.repoLocation).resolve(org).resolve(name)
                         .resolve(version).resolve(platform);
                 FileUtils.copyDirectory(temporaryExtractionPath.toFile(),
                         actualBalaPath.toFile());
