@@ -28,7 +28,6 @@ import picocli.CommandLine;
 import java.io.PrintStream;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static io.ballerina.cli.cmd.Constants.SEMVER_COMMAND;
 
@@ -66,7 +65,7 @@ public class SemverCmd implements BLauncherCmd {
     private boolean showDiff;
 
     public SemverCmd() {
-        this.projectPath = Paths.get(System.getProperty(ProjectConstants.USER_DIR));
+        this.projectPath = Path.of(System.getProperty(ProjectConstants.USER_DIR));
         this.outStream = System.out;
         this.errStream = System.err;
     }
