@@ -52,7 +52,6 @@ import org.wso2.ballerinalang.compiler.util.CompilerContext;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -65,7 +64,7 @@ import java.util.Optional;
  */
 public class TestBalaProject {
 
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src", "test", "resources");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src", "test", "resources");
 
     @Test(description = "tests loading a valid bala project")
     public void testBalaProjectAPI() {
@@ -229,7 +228,7 @@ public class TestBalaProject {
 
         // try to get id of a non-existing file
         try {
-            balaProject.documentId(Paths.get("foo.bal"));
+            balaProject.documentId(Path.of("foo.bal"));
             Assert.fail("expected a ProjectException");
         } catch (ProjectException e) {
             // ignore
