@@ -79,7 +79,6 @@ import java.io.InputStream;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -116,7 +115,7 @@ import static org.testng.Assert.assertTrue;
  * @since 2.0.0
  */
 public class TestBuildProject extends BaseTest {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/");
     private static Path tempResourceDir;
     static final PrintStream OUT = System.out;
     private final String dummyContent = "function foo() {\n}";
@@ -186,7 +185,7 @@ public class TestBuildProject extends BaseTest {
         JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
         Assert.assertEquals(jBallerinaBackend.diagnosticResult().errorCount(), 1);
 
-        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Paths.get("test.jar"));
+        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Path.of("test.jar"));
         Assert.assertFalse(emitResult.successful());
 
         emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, projectPath);
@@ -293,11 +292,11 @@ public class TestBuildProject extends BaseTest {
         Assert.assertEquals(jBallerinaBackend.diagnosticResult().diagnosticCount(), 12);
 
         List<String> expectedPaths = Arrays.asList(
-                Paths.get("modules").resolve("utils").resolve("utils.bal").toString(),
-                Paths.get("modules").resolve("storage").resolve("db.bal").toString(),
-                Paths.get("modules").resolve("services").resolve("svc.bal").toString(),
-                Paths.get("modules").resolve("services").resolve("tests").resolve("svc_tests.bal").toString(),
-                Paths.get("tests").resolve("main_tests.bal").toString(),
+                Path.of("modules").resolve("utils").resolve("utils.bal").toString(),
+                Path.of("modules").resolve("storage").resolve("db.bal").toString(),
+                Path.of("modules").resolve("services").resolve("svc.bal").toString(),
+                Path.of("modules").resolve("services").resolve("tests").resolve("svc_tests.bal").toString(),
+                Path.of("tests").resolve("main_tests.bal").toString(),
                 "main.bal", "utils.bal");
 
         // Verify paths in packageCompilation diagnostics
@@ -1386,7 +1385,7 @@ public class TestBuildProject extends BaseTest {
         Assert.assertEquals(diagnosticResult.diagnosticCount(), 1);
 
         Assert.assertEquals(diagnosticResult.diagnostics().stream().findAny().get().location().lineRange().fileName(),
-                Paths.get("modules").resolve("schema").resolve("schema.bal").toString());
+                Path.of("modules").resolve("schema").resolve("schema.bal").toString());
         Assert.assertTrue(diagnosticResult.diagnostics().stream().findAny().get().message()
                 .contains("unknown type 'PersonalDetails'"));
     }
@@ -2254,14 +2253,14 @@ public class TestBuildProject extends BaseTest {
                 diagnostic.location().lineRange().fileName()).distinct().collect(Collectors.toList());
 
         List<String> expectedDiagnosticPaths = Arrays.asList(
-                "main.bal", Paths.get("tests").resolve("main_test.bal").toString(),
-                Paths.get("tests").resolve("utils_test.bal").toString(), "utils.bal",
-                Paths.get("modules").resolve("services").resolve("auth.bal").toString(),
-                Paths.get("modules").resolve("services").resolve("subscribe.bal").toString(),
-                Paths.get("modules").resolve("services").resolve("update.bal").toString(),
-                Paths.get("modules").resolve("storage").resolve("db.bal").toString(),
-                Paths.get("modules").resolve("storage").resolve("tests").resolve("db_test.bal").toString(),
-                Paths.get("modules").resolve("utils").resolve("utils.bal").toString());
+                "main.bal", Path.of("tests").resolve("main_test.bal").toString(),
+                Path.of("tests").resolve("utils_test.bal").toString(), "utils.bal",
+                Path.of("modules").resolve("services").resolve("auth.bal").toString(),
+                Path.of("modules").resolve("services").resolve("subscribe.bal").toString(),
+                Path.of("modules").resolve("services").resolve("update.bal").toString(),
+                Path.of("modules").resolve("storage").resolve("db.bal").toString(),
+                Path.of("modules").resolve("storage").resolve("tests").resolve("db_test.bal").toString(),
+                Path.of("modules").resolve("utils").resolve("utils.bal").toString());
 
         assertEquals(actualDiagnosticPaths.size(), 10);
         assertEquals(actualDiagnosticPaths, expectedDiagnosticPaths);
@@ -2279,7 +2278,7 @@ public class TestBuildProject extends BaseTest {
     public void testConflictingJars() {
         Path dep1Path = tempResourceDir.resolve("conflicting_jars_test/platformLibPkg1").toAbsolutePath();
         Path dep2Path = tempResourceDir.resolve("conflicting_jars_test/platformLibPkg2").toAbsolutePath();
-        Path customUserHome = Paths.get("build", "userHome");
+        Path customUserHome = Path.of("build", "userHome");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
         ProjectEnvironmentBuilder envBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
 
@@ -2325,7 +2324,7 @@ public class TestBuildProject extends BaseTest {
                 CENTRAL_CACHE.resolve("bala/ballerina/platformLibPkg2/0.1.0/java17/platform/java17/lib4.txt"),
                 PlatformLibraryScope.DEFAULT)));
         Assert.assertTrue(jarLibraries.contains(new JarLibrary(
-                Paths.get("src/test/resources/conflicting_jars_test/platformLibPkg3/" +
+                Path.of("src/test/resources/conflicting_jars_test/platformLibPkg3/" +
                         "target/cache/user/platformLibPkg3/0.1.0/java17/user-platformLibPkg3-0.1.0.jar"),
                 PlatformLibraryScope.DEFAULT)));
         Assert.assertTrue(jarLibraries.contains(new JarLibrary(
@@ -2345,7 +2344,7 @@ public class TestBuildProject extends BaseTest {
     @Test (description = "tests platform dependency resolution with provided scope for build project")
     public void testProvidedScopeJars() {
         Path dep1Path = tempResourceDir.resolve("provided_jars_tests/jars_provided/pkg_a").toAbsolutePath();
-        Path customUserHome = Paths.get("build", "userHome");
+        Path customUserHome = Path.of("build", "userHome");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
         ProjectEnvironmentBuilder envBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
 
@@ -2377,7 +2376,7 @@ public class TestBuildProject extends BaseTest {
     @Test (description = "tests platform dependency resolution with missing 'provided' jars for build project")
     public void testMissingProvidedScopeJars() {
         Path dep1Path = tempResourceDir.resolve("provided_jars_tests/jars_not_provided/pkg_a").toAbsolutePath();
-        Path customUserHome = Paths.get("build", "userHome");
+        Path customUserHome = Path.of("build", "userHome");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
         ProjectEnvironmentBuilder envBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
 
@@ -2395,7 +2394,7 @@ public class TestBuildProject extends BaseTest {
             if (jBallerinaBackend.diagnosticResult().hasErrors()) {
                 Assert.fail("unexpected compilation failure:\n" + getErrorsAsString(compilation.diagnosticResult()));
             }
-            jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Paths.get("test.jar"));
+            jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Path.of("test.jar"));
         } catch (ProjectException e) {
             Assert.assertEquals(e.getMessage(), "cannot resolve 'com.example:project1:1.0'. Dependencies with " +
                     "'provided' scope need to be manually added to Ballerina.toml.");
@@ -2408,7 +2407,7 @@ public class TestBuildProject extends BaseTest {
     public void testConflictingJarsInNonBalPackages() {
         Path dep1Path = tempResourceDir.resolve("conflicting_jars_test/platformLibNonBalPkg1").toAbsolutePath();
         Path dep2Path = tempResourceDir.resolve("conflicting_jars_test/platformLibNonBalPkg2").toAbsolutePath();
-        Path customUserHome = Paths.get("build", "userHome");
+        Path customUserHome = Path.of("build", "userHome");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
         ProjectEnvironmentBuilder envBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
 
@@ -2431,7 +2430,7 @@ public class TestBuildProject extends BaseTest {
             Assert.fail("unexpected compilation failure:\n" + getErrorsAsString(compilation.diagnosticResult()));
         }
 
-        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Paths.get("test.jar"));
+        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Path.of("test.jar"));
 
         Assert.assertFalse(emitResult.diagnostics().hasErrors());
         Assert.assertTrue(emitResult.diagnostics().hasWarnings());
