@@ -31,7 +31,6 @@ import org.testng.annotations.AfterClass;
 import org.testng.annotations.Test;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Optional;
 
@@ -44,7 +43,7 @@ import static io.ballerina.projects.test.TestUtils.resetPermissions;
  * @since 2201.4.0
  */
 public class TestBuildProjectWithGeneratedSources extends BaseTest {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/generated-sources-tests/");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/generated-sources-tests/");
 
     @Test (description = "tests loading a valid build project with generated sources")
     public void testBuildProjectAPI() {
