@@ -26,7 +26,6 @@ import org.testng.annotations.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -41,7 +40,7 @@ public class SemverValidatorTest extends SemverValidatorBaseTest {
     private void setup() throws IOException, BallerinaTestException {
         tempProjectsDir = Files.createTempDirectory("bal-test-integration-semver-");
         customRepoDir = tempProjectsDir.resolve("ballerina-home");
-        Path testProject = Paths.get("src", "test", "resources", "semver").toAbsolutePath();
+        Path testProject = Path.of("src", "test", "resources", "semver").toAbsolutePath();
         FileUtils.copyFolder(testProject, tempProjectsDir);
         balClient = new BMainInstance(balServer);
     }
